# amlapp

./: README.md  main.py  pyproject.toml
app/: dependencies.py  schemas.py  tasks.py
app/providers/: __init__.py  base.py  mock_provider.py  real_provider.py
tests/: test_endpoints.py  test_providers.py  test_schemas.py  test_tasks.py
